Fixed header alignment

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,13 @@ body {
 }
 .header {
     /* border: 2px solid red; */
-    height: 60px;
+    height: 70px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     background-color: #010409;
 }
 
